Fix bug of input box's space being too wide

--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -25,3 +25,7 @@
 .navbar-text {
   margin-left: 15px;
 }
+
+.logo-text {
+  font-family: "Glyphicons Halflings"
+}
