--- a/client/assets/styles/common.scss
+++ b/client/assets/styles/common.scss
@@ -1,5 +1,5 @@
 .theme {
-  font-family: "Glyphicons Halflings";
+  font-family: "Arial";
   background-color: white;
 
   .btn-default {
